FIx bug CRUD